# tutot

./: .gitignore  .nojekyll  Cargo.toml  Makefile  README.md  app.js  graph.js  implementation_plan.md  index.html  package.json  style.css  task.md
.github/workflows/: deploy.yml
DeepTutor/: README.md
DeepTutor/web/: package-lock.json  package.json
agents/: Cargo.toml  agents.md  mod.rs
agents/src/: critic.rs  lib.rs  llm.rs  planner.rs  prompts.rs  synthesizer.rs  tutor.rs
agents/tests/: agent_tests.rs
antigravity/: implementation_plan.md.metadata.json  implementation_plan.md.resolved  implementation_plan.md.resolved.0  implementation_plan.md.resolved.1  task.md.metadata.json  task.md.resolved.0  task.md.resolved.1
core/: Cargo.toml
core/src/: lib.rs
github/: Cargo.toml
github/src/: lib.rs
pedagogy/: Cargo.toml
pedagogy/src/: lib.rs
ui/: Cargo.toml
wiki/: Cargo.toml
wiki/src/: lib.rs
