[workspace]
members = [
    "core",
    "agents",
    "pedagogy",
    "wiki",
    "github",
    "memvid",
    "ui"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DeepMind Team"]

[workspace.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.0", default-features = false }
pulldown-cmark = "0.10"
log = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
gloo-net = "0.6"
gloo-utils = "0.2"
base64ct = { version = "1.6", features = ["alloc"] }
sha2 = "0.10"
hmac = "0.12"
mv2 = { path = "./memvid" } # Using the local memvid crate
