[package]
name = "ui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
core = { path = "../core" }
