[package]
name = "wiki"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
pulldown-cmark = { workspace = true }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
